		* Renamed Game_Init and Game_Shutdown to Init and Shutdown (as they are intended to be called, I fucked up renaming things)
	* Game API version 9
		* Renamed import functions to be more consistently named and the same names as the engine when applicable
		* Exposed Cmd_AddCommand and Cmd_RemoveCommand to the game dll (they were already exposed to the refresh dll)
	* Camera system changes:
		* Changed the flags for svc_playerinfo from short to int, as more than 16 bits were needed to pack in all of the flags

	* A dedicated server binary, on Windows as well as Linux...
	* Implemented localisation into the game
		* The language is controlled by the language cvar
		* Strings are loaded from text\<language->value>\strings.txt (max 1024 strings, 64 key length and 512 key value)
		* They are referred to using the syntax [STRING_KEY] in code
		* A maximum of 1,024 localisation strings can be loaded (this limit is also applied to the processed localised strings)
			* A list of dynamically allocated localised strings is kept and added to when a string key that has not been previously localised is found. 
			* Localised strings are cached in memory and returned if the localisation string has already been cached.
	* Made the engine game-agnostic
		* Changed references to Zombono to the value of the name field of the gameinfo_t structure (loaded from gameinfo.json)
	* Changed build output directory from $(SolutionDir)/build/out to $(SolutionDir)/build/$(Configuration)
		* This was meant to be temporary but took 7 months to change...
	* Changed game binary to be EuphoriaEngine.exe as this engine will be used for many games to come (hopefully)
	* Changed intro graphic
	* Made the engine version a cvar
	* Renamed many gamedll functions for consistency
	* Wrote a tool to generate an updateinfo.json file automatically:
		* Changed the updater to use automatically generated updateinfo.json files
	* Added the time of build to the version cvar
	* Refactored gamemodes