@@ -11,8 +11,15 @@ NEW FEATURES:
 		* Renamed import functions to be more consistently named and the same names as the engine when applicable
 		* Exposed Cmd_AddCommand and Cmd_RemoveCommand to the game dll (they were already exposed to the refresh dll)
 	* Camera system changes:
+		* Allowed for multiple camera angles.
+		* The game now renders the view from the "vieworigin" field of pmove instead of the player origin
+			* This is set based on the current camera type
+			* There are currently four camera types
+				* CAMERA_TYPE_NORMAL - Normal firstperson camera
+				* CAMERA_TYPE_CHASE - A third-person camera
+				* CAMERA_TYPE_TOPDOWN - A top-down camera mode :^)
+				* CAMERA_TYPE_FREE - A freecam
 		* Changed the flags for svc_playerinfo from short to int, as more than 16 bits were needed to pack in all of the flags
-
 	* A dedicated server binary, on Windows as well as Linux...
 	* Implemented localisation into the game
 		* The language is controlled by the language cvar
@@ -46,13 +53,14 @@ BUG FIXES:
 	* Fixed ability to press arrow keys in legacy UI fields
 	* Fixed MSBuild warning generated by build path not having a trailing slash
 
+
 REMOVALS:
 	* Obsolete Windows-only code
-
+	* Removed the unused Legacy UI menulist control as first step to removing legacy ui
 
 OTHER CHANGES:
 	* Made update prompt game-agnostic
-	* [Legacy UI] Removed menulsit control (unused) as first step to removing legacy ui
+	* Changed default windowed resolution to 1366*768 (instead of 1024*768), so the game runs in 16:9 widescreen by default
 
 * NOTE: con_line_length only has any effect on dedicated servers
 
